# IslandGrowth

./: CMakeLists.txt  Makefile  README.md
assets/: tilemap.aseprite
data/: config.yaml
data/tilemaps/: tiles.aseprite  tiles.json
data/worlds/: debug.json
src/: init.c  main.cc  scenes.hh
src/entity/: entity.cc  entity.hh  mob.cc  mob.hh  player.cc  player.hh
src/game/: game.cc  game.hh  tilemap.cc  tilemap.hh
src/menu/: menu.cc  menu.hh
src/world/: world.cc  world.hh
